project2/test/test_2_r04.out
Error type 4 at line 7: compare function is redefined
