project2/test/test_2_r04.out2
Error type 4 at Line 7: compare function is redefined
Error type 8 at Line 15: function return type is not matched
